--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,7 +65,7 @@
         </div>
     </section>
     <div class="image-vector"></div>
-    <div class="toast">Sample message</div>
+    <div class="toast"></div>
     <script src="../js/index.js"></script>
 </body>
 
